update hubungi, index

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
     
     <!-- Ini Gambar -->
-    <div class="text-center col-sm-4">
-        <img src="img/web-imlek.jpg" class="rounded img-fluid" >
+    <div class="col-lg-12">
+        <img src="img/web-imlek.jpg" class="rounded img-fluid">
     </div>
 
     <!-- Ini Paragraf -->
